# cstd-savinva-2122

./: CMakeLists.txt  README.MD  README.ML  ci.sh
Client/: CMakeLists.txt  IO.c  USB.c  db.c  dbg.c  file_IO.c  main.c
Client/headers/: IO.h  USB.h  db.h  file_IO.h  kernel.h
ServerSide/: CMakeLists.txt  kernel.c  main.c
ServerSide/headers/: ai.h  essentials.h  input.h  kernel.h
ServerSide/src/: ai.cpp  essentials.cpp  input.cpp  kernel.c  kernel.cpp  main.c  main.cpp  pos_eval.cpp
ServerSide/tests/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/headers/: Arduino.h
Tests/tests/: CMakeLists.txt  client_io_tests.cpp  client_usb_tests.cpp  kernel_tests.cpp
